config/webhook/versions/batch-v1-cronjob_admissionregistration.k8s.io-v1-mutatingwebhookconfiguration.yaml
# OpenShift 4.9 (k8s 1.22)
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    description: OpenShift 4.9 (k8s 1.22)
    service.beta.openshift.io/inject-cabundle: "true"
  name: mutating-webhook-configuration-v1-v1
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: ""
    service:
      name: webhook-service
      namespace: system
      path: /mutate-batch-v1-cronjob
  name: vcronjob.kb.io
  rules:
  - apiGroups:
    - batch
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cronjobs
  sideEffects: None
