config/webhook/versions/batch-v1beta1-cronjob_admissionregistration.k8s.io-v1-validatingwebhookconfiguration.yaml
# OpenShift 4.6 (k8s 1.19)
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration-v1beta1-v1
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $(CA_CERT_B64)
    service:
      name: webhook-service
      namespace: system
      path: /validate-batch-v1beta1-cronjob
  failurePolicy: Fail
  name: vcronjob.kb.io
  rules:
  - apiGroups:
    - batch
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cronjobs
  sideEffects: None
