config/webhook/versions/batch-v1beta1-cronjob_admissionregistration.k8s.io-v1beta1-mutatingwebhookconfiguration.yaml
# OpenShift 3.11 (k8s 1.11)
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    description: OpenShift 3.11 (k8s 1.11)
  name: mutating-webhook-configuration-v1beta1-v1beta1
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: ${CA_CERT_B64}
    service:
      name: webhook-service
      namespace: system
      path: /mutate-batch-v1beta1-cronjob
  name: vcronjob.kb.io
  rules:
  - apiGroups:
    - batch
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cronjobs
  sideEffects: None
