config/webhook/versions/batch-v2alpha1-cronjob_admissionregistration.k8s.io-v1beta1-validatingwebhookconfiguration.yaml
# OpenShift 3.10 (k8s 1.10)
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration-v2alpha1-v1beta1
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: $(CA_CERT_B64)
    service:
      name: webhook-service
      namespace: system
      path: /validate-batch-v2alpha1-cronjob
  failurePolicy: Fail
  name: vcronjob.kb.io
  rules:
  - apiGroups:
    - batch
    apiVersions:
    - v2alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cronjobs
  sideEffects: None
